--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,20 @@
-.App {
-  text-align: center;
-}
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
+:root{
+  --primary-text : white;
+     --secondary-text: #808191;
+     --primary-bg-color:#000000 ;
+     /* --secondary-bg-color: #191C20; */
+     --secondary-bg-color:#242731;
+    --button-bg-color: #A3E3FF;
+    --button-text-color:#3772FF;
+    --highlight-color: #3772FF;
+    --span-bg-color: #353945;
+    --light-color: #ABE8FF;
+    --dark-color: #2B2557;
+  
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
 
-.App-link {
-  color: #61dafb;
-}
+    --main--heading : 'Kaushan Script', cursive;
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
